fixes to argument parsing to allow for alternate main scripts, plus shader reorganization.

--- a/FreeBuildJ/data/ui/logo.html
+++ b/FreeBuildJ/data/ui/logo.html
@@ -18,6 +18,10 @@
 				top: 25px;
 				border: 5px dotted #ff00ff;
 			}
+			
+			input {
+				border: 5px dotted #00ff00;
+			}
 		</style>
 		<title>Test Logo</title>
 	</head>
