classpath + naming cleanses

--- a/FreeBuildJ/data/ui/logo.html
+++ b/FreeBuildJ/data/ui/logo.html
@@ -28,8 +28,10 @@
 	<body id="logo">
 		<img id="rifm_logo" src="logo.png" alt="test logo" />
 		Test
-		<form>
-		<input type="text" />
+		<form action="#" >
+		Name: <input type="text" name="fname"/><br/>
+		Last: <input type="text" name="lname"/><br/>
+		<input type="submit" value="Submit"/>
 		</form>
 	</body>
 </html>
